# fakepack

./: .gitignore  README.md  pyproject.toml  setup.py
fakepack/: __init__.py  fakepack.py
tests/: test_tmp.py
