[tool.poetry]
name = 'fakepack'
version = '0.0.2'
description = 'Fake packaging'
authors = ["zae-park <tom941105@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
fake = "fakepack.fakepack:fake"

[build-system]
requires = ["poetry>=0.12", "click"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39']
